--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2{
     p{
         color: dimgray;
     }
-.name-highlight{
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -23,7 +23,7 @@ h2{
 }
 .half-width img{
     width: 100%;
-    margin-top: -10%;
+    margin-top: -22%;
  }
 .top-banner{
   background-image: url("images/top-banner.png");
@@ -31,7 +31,7 @@ h2{
 }
 section{
     height: 500px ;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
@@ -45,4 +45,30 @@ section{
  background-image: url("images/dream-bg.png");
  background-repeat: no-repeat;
  background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+border-left:7px solid;
+border-image: linear-gradient(180deg,lightsalmon,tomato );
+border-image-slice: 1;
+
+}
+#junior-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,cyan,blue );
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
 }
